Adding Git Ignore

--- a/resources/projectConfig.properties
+++ b/resources/projectConfig.properties
@@ -8,7 +8,7 @@ exec.report.name = Demo project using SauseDemo.com in HRMl Report
 html.report.generate = single
 
 
-loc.pattern.code = loc.lhub
+loc.pattern.code = loc.demo
 #loc.pattern.code = loc.uw
 # Default loc.pattern=false
 
