Adding Git Ignore

--- a/resources/locators/locPattern.properties
+++ b/resources/locators/locPattern.properties
@@ -1,4 +1,4 @@
-# This Property file is used to configure Locator Pattern
+locPattern.properties# This Property file is used to configure Locator Pattern
 # Available replacement values: loc.auto.forValue, loc.auto.fieldName
 
 
