Adding Git Ignore

--- a/resources/locators/DemolocPattern.properties
+++ b/resources/locators/DemolocPattern.properties
@@ -1,2 +1,7 @@
 locPattern.properties# This Property file is used to configure Locator Pattern
 # Available replacement values: loc.auto.forValue, loc.auto.fieldName
+
+#loc.demo.pattern.label=["xpath=//LABEL[text()='${loc.auto.fieldName}']","xpath=//LABEL[@title='${loc.auto.fieldName}']"]
+loc.demo.pattern.input=["xpath=//INPUT[@placeholder='${loc.auto.fieldName}']"]
+loc.demo.pattern.button=["xpath=//INPUT[@value='${loc.auto.fieldName}'][@type='submit']"]
+loc.demo.pattern.header=["xpath=//SPAN[@class='title'][text()='${loc.auto.fieldName}']"]
