Adding Git Ignore

--- a/environment-config/ATHENA/config.properties
+++ b/environment-config/ATHENA/config.properties
@@ -1,6 +1,9 @@
-env.url=https://ncsathenasit.crm5.dynamics.com/main.aspx?appid=5d3a7357-e162-ee11-8df0-002248ecfec2
-env.username=SITest03@NCSD365Developmentoutlook.onmicrosoft.com
-env.pwd=pwd.Vm05cllUQTJNemc1TWc9PQ==
+#env.url=https://ncsathenasit.crm5.dynamics.com/main.aspx?appid=5d3a7357-e162-ee11-8df0-002248ecfec2
+#env.username=SITest03@NCSD365Developmentoutlook.onmicrosoft.com
+#env.password=pwd.Vm05cllUQTJNemc1TWc9PQ==
+env.url=https://ntuc-athena-uat.crm5.dynamics.com/main.aspx?appid=b33d23e6-3263-ee11-8def-000d3aa3f1c9
+env.username=athenatemp16@ntuc.sg
+env.password=pwd.Vkc5a1lYa3hNak0wTlRZMw==
 
 
 
