--- a/resources/d365Config.properties
+++ b/resources/d365Config.properties
@@ -6,8 +6,8 @@ d365.platform=crm
 # Mention D365(MsDynamic) Platform version. (Default: crm) Eg: crm, erp
 d365.platform.version=9.2
 # Mention D365(MsDynamic) CRM version=9.1, 9.2, 9.2.nl (9.2 with new look UI)
-#d365.crm.version=9.2.nl
-d365.crm.version=9.2
+d365.crm.version=9.2.nl
+#d365.crm.version=9.2
 
 # Enable D365 generated locator in logging (Default: false)
 d365.loc.log=false
