--- a/resources/locators/DemolocPattern.properties
+++ b/resources/locators/DemolocPattern.properties
@@ -5,3 +5,4 @@ locPattern.properties# This Property file is used to configure Locator Pattern
 loc.demo.pattern.input=["xpath=//INPUT[@placeholder='${loc.auto.fieldName}']"]
 loc.demo.pattern.button=["xpath=//INPUT[@value='${loc.auto.fieldName}'][@type='submit']"]
 loc.demo.pattern.header=["xpath=//SPAN[@class='title'][text()='${loc.auto.fieldName}']"]
+loc.demo.pattern.input=["xpath=//INPUT[@placeholder='${loc.auto.fieldName}']","xpath=//INPUT[@placeholder='dummy.some.blah.${loc.auto.fieldName}']"]
