--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,7 @@
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
-      <version>2.13.0</version>
+      <version>2.16.1</version>
     </dependency>
     <!-- Allure Report
     <dependency>
@@ -135,6 +135,37 @@
       <artifactId>extentreports</artifactId>
       <version>5.1.1</version>
     </dependency>
+
+    <!-- Excel reading and writing -->
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi</artifactId>
+      <version>5.3.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml</artifactId>
+      <version>5.3.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml-lite</artifactId>
+      <version>5.3.0</version>
+    </dependency>
+
+    <!-- Option 2 for Excel reading. Alternative for Apache POI -->
+    <dependency>
+      <groupId>org.dhatim</groupId>
+      <artifactId>fastexcel</artifactId>
+      <version>0.18.3</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.dhatim</groupId>
+      <artifactId>fastexcel-reader</artifactId>
+      <version>0.14.0</version>
+    </dependency>
+
     <!--   Log4J Dependencies-->
     <dependency>
       <groupId>org.slf4j</groupId>
