Utils: Passport number generator for Singapore and Australia

--- a/resources/locators/add-ons/ivalua_LocPattern.properties
+++ b/resources/locators/add-ons/ivalua_LocPattern.properties
@@ -1,16 +1,31 @@
 locPattern.properties# This Property file is used to configure Locator Pattern
 # Available replacement values: loc.auto.forValue, loc.auto.fieldName
+loc.ivalua.pattern.header_temp=["xpath=//nav[@id='navbar-main']//div[contains(text(),'${loc.auto.fieldName}')]","xpath=//DIV[@id='header_x_prxHeaderTitle_x']/descendant::h1[text()='${loc.auto.fieldName}']","xpath=//H1[contains(text(),'${loc.auto.fieldName}')]"]
 
 
-loc.ivalua.pattern.label=["xpath=//LABEL[text()='${loc.auto.fieldName}']","xpath=//LABEL[@title='${loc.auto.fieldName}']"]
+loc.ivalua.pattern.label=["xpath=//LABEL[SPAN[text()='${loc.auto.fieldName}']]"]
 loc.ivalua.pattern.input=["xpath=//INPUT[@id='${loc.auto.forValue}']","xpath=//INPUT[@placeholder='${loc.auto.fieldName}']","xpath=//INPUT[contains(@placeholder,'${loc.auto.fieldName}')]"]
-loc.ivalua.pattern.button=["xpath=//BUTTON[text()='${loc.auto.fieldName}']"]
-loc.ivalua.pattern.header=["xpath=//nav[@id='navbar-main']//div[contains(text(),'${loc.auto.fieldName}')]","xpath=//DIV[@id='header_x_prxHeaderTitle_x']/descendant::h1[text()='${loc.auto.fieldName}']"]
-loc.ivalua.pattern.link=["xpath=//A[text()='${loc.auto.fieldName}']"]
+loc.ivalua.pattern.button=["xpath=//BUTTON[text()='${loc.auto.fieldName}']", "xpath=//button[span[text()='${loc.auto.fieldName}']]" ,"xpath=//NAV[@aria-label='${loc.auto.fieldName}']/BUTTON" , "xpath=//BUTTON//DIV[text()='${loc.auto.fieldName}']","xpath=//A//DIV[text()='${loc.auto.fieldName}']"]
+loc.ivalua.pattern.header=["xpath=//DIV[@id='header_x_prxHeaderTitle_x']/descendant::h1[text()='${loc.auto.fieldName}']","xpath=//H1[contains(text(),'${loc.auto.fieldName}')]"]
+loc.ivalua.pattern.link=["xpath=//A[SPAN[text()='${loc.auto.fieldName}']]","xpath=//A[text()='${loc.auto.fieldName}']","xpath=//A//DIV//SPAN[text()='${loc.auto.fieldName}']"]
+loc.ivalua.pattern.checkbox=["xpath=//input[@id='${loc.auto.forValue}'][@type='checkbox']"]
 
+loc.ivalua.pattern.section=["xpath=//h2[text()='${loc.auto.section.name}']/ancestor::div[contains(@class,'ui frame segment')]"]
 
-loc.ivalua.pattern.location.top_menu="xpath=//div[@id='header_x_headerNavBar']"
+loc.ivalua.pattern.location.top_menu="xpath=//nav[@aria-label='Main Menu']"
+loc.ivalua.pattern.location.top_menu_bar="xpath=//div[@id='header_x_headerNavBar']"
+loc.ivalua.pattern.location.header_bar="xpath=//DIV[@class='header-location-bar']"
 loc.ivalua.pattern.location.top_menu_dropdown="xpath=//ul[@class='main-nav menu transition visible']"
+loc.ivalua.pattern.location.top_notifications_dropdown="xpath=//nav[@aria-label='Notification Menu']"
+loc.ivalua.pattern.location.dialog="xpath=//div[contains(@class,'visible active')][@role='dialog']"
+loc.ivalua.pattern.location.left_menu="xpath=//div[@id='leftPanel']"
+loc.ivalua.pattern.location.main_actions="xpath=//DIV[@class='main-actions']"
+loc.ivalua.pattern.location.main_window="xpath=//main[@id='mainContentDiv']"
+loc.ivalua.pattern.location.table="//table[caption[contains(text(),'${loc.auto.location.name}')]]
+
+# //table[caption[contains(text(),'Qualifications')]]//tr[2]//td[3]
+
+
 
 
 
